# kiroku

./: .gitignore  .gitleaksignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: database.py  errors.py  main.py  schema.sql
backend/app/models/: analytics.py  asset.py  candle.py  dashboard.py  emotion.py  massive.py  news_event.py  preferences.py  projections.py  response.py  tag.py  trade.py
backend/app/repositories/: asset_repository.py  emotion_repository.py  news_repository.py  preferences_repository.py  tag_repository.py  trade_repository.py
backend/app/routers/: analytics.py  assets.py  backup.py  dashboard.py  emotions.py  massive.py  news.py  preferences.py  projections.py  screenshots.py  tags.py  trades.py
backend/app/services/: analytics_service.py  asset_service.py  backup_service.py  candle_service.py  chart_service.py  dashboard_service.py  emotion_service.py  futures_service.py  massive_service.py  news_service.py  preferences_service.py  projections_service.py  screenshot_service.py  tag_service.py  trade_service.py
backend/tests/: conftest.py  test_candle_service.py  test_chart_service.py  test_futures_service.py  test_health.py  test_massive_service.py  test_news.py  test_projections.py  test_schema.py
backend/tests/integration/: test_futures_candles.py
backend/tests/routers/: test_analytics.py  test_assets.py  test_backup.py  test_dashboard.py  test_emotions.py  test_massive.py  test_news.py  test_preferences.py  test_screenshots.py  test_tags.py  test_trade_candles.py  (+2 more)
(+266 files in other folders)
