[project]
name = "kiroku-backend"
version = "0.5.3"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
  "databases[aiosqlite]==0.9.0",
  "aiosqlite==0.22.1",
  "pydantic==2.10.4",
]

[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
