[project]
name = "kiroku-backend"
version = "0.5.3"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.115.6",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
  "databases[aiosqlite]==0.9.0",
  "aiosqlite==0.22.1",
  "pydantic==2.10.4",
  "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
  "ruff==0.15.16",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "httpx==0.28.1",
]

[tool.ruff]
indent-width = 2
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
